# ekf_ilo

./: .gitignore  CMakeLists.txt  README.md  package.xml
bags/: readme.md
config/aliengo_config/: aliengo_ilo_config.yaml
config/rviz/: truth_path_config.rviz
launch/dataset/: run_1_bag_ilo.launch  run_2_bag_ilo.launch  run_3_bag_ilo.launch
launch/hardware_aliengo/: hardware_aliengo_ilo.launch
launch/simulate_aliengo/: simulate_aliengo.launch
shell/lib_install/Ceres/: CMakeLists.txt  Ceres_install.sh  test.cpp
shell/lib_install/Eigen3/: CMakeLists.txt  Eigen3_install.sh  test.cpp
shell/lib_install/casadi/: CMakeLists.txt  casadi_install.sh  test.cpp  test.sh
shell/lib_install/gram_savitzky_golay/: gram_savitzky_golay_install.sh
shell/lib_install/ipopt/: ipopt_install.sh
shell/lib_install/yaml-cpp/: CMakeLists.txt  test.cpp  yaml-cpp_install.sh
src/: main.cpp
src/kalmanFilter/: A1KF.hpp  A1KFCombineLOWithFoot.cpp  A1KFCombineLOWithFoot.h  KF.hpp  basicEKF.cpp  basicEKF.h  filter.hpp
src/legKinematics/: kinematics.cpp  kinematics.h
src/utils/: parameters.cpp  parameters.h  utility.cpp  utility.h  visualization.cpp  visualization.h
urdf/aliengo_description/urdf/: aliengo_new.urdf
urdf/aliengo_description/xacro/: const.xacro
